--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ authors = ["Newton Ni <nwtnni@gmail.com>"]
 reqwest = "0.8.5"
 select = "0.4.2"
 regex = "0.2"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
