--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Newton Ni <nwtnni@gmail.com>"]
 failure = "0.1.1"
 lazy_static = "1.0"
 reqwest = "0.8.5"
-select = "0.4.2"
+scraper = "0.6.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
