--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,12 @@ authors = ["Newton Ni <nwtnni@gmail.com>"]
 [dependencies]
 failure = "0.1.1"
 lazy_static = "1.0"
+log = "0.4"
 reqwest = "0.8.5"
 scraper = "0.6.0"
+simplelog = "0.5.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+natural = "0.3.0"
+stopwords = "0.1.0"
