Ugly regex hacks to discard random hyperlinks in summary, synopsis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ failure = "0.1.1"
 lazy_static = "1.0"
 log = "0.4"
 reqwest = "0.8.5"
+regex = "0.2"
 scraper = "0.6.0"
 simplelog = "0.5.1"
 serde = "1.0"
